[gd_scene load_steps=5 format=3 uid="uid://b8fqtulpqrgmc"]

[ext_resource type="Script" path="res://Properties/Interface/gd_OverlayPropertyItem.gd" id="1_8aeew"]
[ext_resource type="Texture2D" uid="uid://bulx7384td3sc" path="res://Icons/caret-on.png" id="2_p38wg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6a17c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_10sed"]

[node name="OverlayPropertyItem" type="VBoxContainer"]
theme_override_constants/separation = 0
script = ExtResource("1_8aeew")

[node name="HeaderBG" type="PanelContainer" parent="."]
layout_mode = 2
theme_type_variation = &"Header"

[node name="HeaderLayout" type="HBoxContainer" parent="HeaderBG"]
layout_mode = 2

[node name="Caret" type="Button" parent="HeaderBG/HeaderLayout"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
toggle_mode = true
button_pressed = true
icon = ExtResource("2_p38wg")
flat = true
expand_icon = true

[node name="OverlayInfo" type="Label" parent="HeaderBG/HeaderLayout"]
layout_mode = 2
text = "Overlay Name (OverlayType)"

[node name="PropertyBG" type="PanelContainer" parent="."]
layout_mode = 2

[node name="PropertyLists" type="VBoxContainer" parent="PropertyBG"]
layout_mode = 2

[node name="EventLabel" type="Label" parent="PropertyBG/PropertyLists"]
layout_mode = 2
text = "Event Properties (Read Only):"

[node name="EventPropertyList" type="ItemList" parent="PropertyBG/PropertyLists"]
layout_mode = 2
theme_type_variation = &"Tertiary"
theme_override_styles/focus = SubResource("StyleBoxEmpty_6a17c")
auto_height = true

[node name="OverlayLabel" type="Label" parent="PropertyBG/PropertyLists"]
layout_mode = 2
text = "Overlay Properties:"

[node name="OverlayPropertyList" type="ItemList" parent="PropertyBG/PropertyLists"]
layout_mode = 2
theme_type_variation = &"Tertiary"
theme_override_styles/focus = SubResource("StyleBoxEmpty_10sed")
auto_height = true
